# UMNN

./: 8gaussians.ipynb  DEV_SETUP.md  LICENSE  MNISTExperiment.py  MonotonicMLP.py  README.md  ToyExperiments.py  TrainVaeFlow.py  conditionnal_8gaussians.ipynb  environment.yml  pyproject.toml  release.sh  requirements.txt  setup_env.sh
Presentation/: LICENSE  README.md  index.html  talk.md
Presentation/assets/: katex.min.css  style.css
datasets/: __init__.py  download_datasets.py
doc/: CHANGELOG.md  PUBLISHING_GUIDE.md  QUICK_PUBLISH.md  README.md
lib/: DrawContour.py  QuadTree.py  dataloader.py  toy_data.py  transform.py  visualize_flow.py
models/: __init__.py  setup.py
models/UMNN/: MonotonicNN.py  NeuralIntegral.py  NeuralIntegralNumpy.py  ParallelNeuralIntegral.py  UMNNMAF.py  UMNNMAFFlow.py  __init__.py  made.py  spectral_normalization.py
models/vae_lib/models/: CNFVAE.py  VAE.py  flows.py
models/vae_lib/optimization/: loss.py  training.py
models/vae_lib/utils/: load_data.py  log_likelihood.py
script_examples/: UCIExperiments.py
tests/: test_jit.py  test_numerical_validation.py
